--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,68 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
+  height: 100vh;
+  overflow: hidden;
+  background-color: darkgray;
+}
+
+.half {
+  width: 50%;
+  padding: 20px;
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  box-sizing: border-box;
+  overflow: hidden;
 }
 
-.App-link {
-  color: #61dafb;
+.image {
+  max-width: 100%;
+  max-height: 100%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.secondHalf {
+  width: 100%;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+.form1 {
+  height: 30%;
+  margin-bottom: 200px;
+  margin-top: -100px;
+}
+
+.form2 {
+  height: 60%;
+}
+
+/* Add a gap between form1 and form2 */
+.gap {
+  height: 10%;
+}
+
+
+.form input {
+  margin-bottom: 10px;
+  padding: 5px;
+}
+
+.form button {
+  padding: 10px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+}
+.buttonSection {
+  display: flex;
+}
+
+.buttonSection div{
+  padding: 20px;
 }
