--- a/src/ImageGallery.css
+++ b/src/ImageGallery.css
@@ -17,6 +17,7 @@
     max-width: 100%;
     max-height: 100%;
     height: 660px;
+    width:660px;
 }
 
 .arrow-buttons {
@@ -25,6 +26,14 @@
     width: 200px; /* Adjust as needed */
     margin-top: 10px;
 }
+
+.arrow-buttons-placeholder {
+    display: flex;
+    justify-content: space-between;
+    width: 200px; /* Adjust as needed */
+    margin-top: 10px;
+}
+
 
 .arrow-buttons button {
     background-color: black;
